Revamp About Me section with new content and styles
Updated the About Me section in index.html with a detailed professional and academic introduction, structured highlights, and a closing statement. Enhanced style.css with new classes and responsive styles to visually support the new About Me layout, including highlighted sections, passion grid, and improved typography.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,32 @@
         <section class="section">
             <h2>About Me</h2>
             <div class="about-grid">
-                <div>
-                    <p>Write a compelling introduction about yourself here. Describe your background, what drives you professionally, and what makes you unique in your field.</p>
-                    <br>
-                    <p>Include your career goals, what you're passionate about, and any personal interests that showcase your personality.</p>
+                                <div class="about-content">
+                    <div class="intro-highlight">
+                        <p class="lead-text">I'm a Graduate Software Engineer at <strong>Rio Tinto</strong>, where I design and optimize mining systems through .NET development, linear programming, and heuristic algorithms. My work bridges rigorous algorithmic design with the messy realities of large-scale industrial optimization — making complex systems smarter, faster, and more reliable.</p>
+                    </div>
+                    
+                    <div class="research-section">
+                        <p>Alongside my industry role, I'm completing an <strong>MPhil in Computer Science at QUT</strong>, researching deep semi-supervised, uncertainty-aware 3D point cloud models for medical imaging. My research is driven by a simple idea: applying AI not only to make industries efficient, but also to make healthcare smarter, safer, and more accessible.</p>
+                    </div>
+
+                    <div class="passion-section">
+                        <h5>My career journey reflects a dual passion:</h5>
+                        <div class="passion-grid">
+                            <div class="passion-item">
+                                <h6>🚀 Applied Innovation</h6>
+                                <p>Enhancing real-world systems at scale through software engineering, cloud technologies, and optimization research.</p>
+                            </div>
+                            <div class="passion-item">
+                                <h6>🔬 Academic Depth</h6>
+                                <p>Exploring AI methods that push the boundaries of what's possible in medical imaging and beyond.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="closing-statement">
+                        <p><em>I thrive at the intersection of research and practice, turning theory into working systems and working systems into new opportunities for discovery. Whether in the lab, in the pit, or in the cloud, I'm motivated by challenges that demand both intellectual curiosity and practical impact.</em></p>
+                    </div>
                 </div>
                 <div>
                     <h4>Quick Facts</h4>
