Refactor experience and education sections for clarity: update job dates and locations, enhance technology tags, and link research topic for improved accessibility.

--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@
             <div class="experience-timeline">
             <div class="experience-item">
                 <h3>Graduate Software Engineer (Full-time)</h3>
-                <div class="date">08/2024 - Present</div>
-                <div class="location">Rio Tinto, Brisbane AU · On-site</div>
+                <div class="date">Aug 2024 – Present</div>
+                <div class="location">Rio Tinto, Brisbane, Australia · On-site</div>
                 <div class="exp-tags" aria-label="Key technologies">
-                    <span>.NET</span><span>C#</span><span>Optimization</span><span>LP</span><span>Heuristics</span><span>Desktop App</span><span>Testing</span>
+                    <span>.NET Development</span><span>C#</span><span>Linear Programming</span><span>Unit Testing</span><span>Heuristic Algorithms</span>
                 </div>
                 <ul>
                     <li><strong>Rotation 1 – Software Engineering:</strong> Delivered features for a long‑horizon mine planning & optimization desktop platform (C#/.NET); implemented statistical & linear optimization modules; refactored core components; expanded automated unit test coverage.</li>
@@ -305,7 +305,7 @@
                     <div class="edu-tags" aria-label="Key focus areas">
                         <span>Deep Learning</span><span>3D Point Clouds</span><span>Semi-Supervised</span><span>Uncertainty</span><span>Medical Imaging</span><span>Python</span>
                     </div>
-                    <p class="research-topic"><strong>Research Topic:</strong> Deep Semi-Supervised Point Cloud-Based Models with Uncertainty Awareness for Efficient Abnormality Detection in 3D Medical Imaging.</p>
+                    <p class="research-topic"><strong>Research Topic:</strong> <a class="pub-link" href="https://eprints.qut.edu.au/259810/" target="_blank" rel="noopener" aria-label="Open QUT ePrints page for this research topic">Deep Semi-Supervised Point Cloud-Based Models with Uncertainty Awareness for Efficient Abnormality Detection in 3D Medical Imaging</a></p>
                     <div class="edu-awards" aria-label="Scholarship awarded during MPhil">
                         <h4 class="award-heading">Scholarship</h4>
                         <ul class="award-list">
