Add resume PDF and update CV download link
Added Yubo_Chen_Resume.pdf to the project and updated the CV download link in index.html to point to the new file instead of cv.pdf.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <span class="contact-icon">🔗</span>
                     <span>GitHub</span>
                 </a>
-                <a href="cv.pdf" class="header-contact-item" download>
+                <a href="Yubo_Chen_Resume.pdf" class="header-contact-item" download>
                     <span class="contact-icon">📄</span>
                     <span>Download CV</span>
                 </a>
