Update metrics section in index.html
Replaced 'Optimisation Prototypes' metric with 'Motivation' and updated its value and description to better reflect current focus.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             <li class="metric" role="listitem"><span class="metric-value">5+</span><span class="metric-label">Core Domains Touched<br><small>Optimization · CV · Data</small></span></li>
                             <li class="metric" role="listitem"><span class="metric-value">3</span><span class="metric-label">Research Papers<br><small>AI & Imaging</small></span></li>
                             <li class="metric" role="listitem"><span class="metric-value">∞</span><span class="metric-label">Curiosity<br><small>Always exploring</small></span></li>
-                            <li class="metric" role="listitem"><span class="metric-value">4</span><span class="metric-label">Optimisation Prototypes<br><small>Working on</small></span></li>
+                            <li class="metric" role="listitem"><span class="metric-value">∞</span><span class="metric-label">Motivation<br><small>Moving on</small></span></li>
                         </ul>
                     </div>
 
