Add Data Engineer rotation to experience section
Added details for a third rotation focused on applied machine learning, including web-based LLM applications, retrieval-grounded QA, document summarisation, and production monitoring.

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <ul>
                     <li><strong>Rotation 1 – Software Engineering:</strong> Delivered features for a long‑horizon mine planning & optimization desktop platform (C#/.NET); implemented statistical & linear optimization modules; refactored core components; expanded automated unit test coverage.</li>
                     <li><strong>Rotation 2 – R&D Optimization:</strong> Researched and prototyped linear & heuristic algorithms to improve scheduling performance (solution quality & runtime); benchmarked approaches; productionised successful prototypes into maintainable code.</li>
-                </ul>
+                    <li><strong>Rotation 3 – Data Engineer (Applied ML):</strong> Designed and built web-based LLM applications (Python/React/Node.js); implemented retrieval-grounded QA and document summarisation; set up evaluation, prompt/version control, and production monitoring; shipped containerised services with CI/CD and observability dashboards.</li>                </ul>
             </div>
 
             <div class="experience-item">
